work on mail verification

--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 SERVER_PORT=3000
 SMTP_MAIL="chandrakishoret197@gmail.com"
 SMPT_PASSWORD="outz lhtj tyly kcsk"
-SMTP_HOST="smtp.email.com"
+SMTP_HOST="smtp.gmail.com"
 SMTP_PORT="587"
