worked on login with jwt

--- a/.env
+++ b/.env
@@ -3,3 +3,4 @@ SMTP_MAIL="chandrakishoret197@gmail.com"
 SMPT_PASSWORD="outz lhtj tyly kcsk"
 SMTP_HOST="smtp.gmail.com"
 SMTP_PORT="587"
+ACCESS_TOKEN_SCRET = "your_access_token_secret"
